# img-compress

./: .gitignore  LICENSE  README.md  build.py  build_mac.py  build_windows.py  fetch_vendor.py  fetch_vendor_all.py  imgcompress.spec  main.py  pyproject.toml  requirements.txt
imgcompress/: app.py  compress.py  models.py
native/: CMakeLists.txt  Info.plist  Info.plist.in  app_config.json  build_config.json  build_config.macos.json  build_mac.py  build_windows.py
native/installer/windows/: build_installer.py  imgcompress.iss
native/resources/: app.rc.in  resources.qrc
native/resources/icons/: app.icns
native/src/: main.cpp
native/src/app/: MainWindow.cpp  MainWindow.h
native/src/core/: CompressController.cpp  CompressController.h  CompressWorker.cpp  CompressWorker.h
native/src/engine/: EngineRegistry.cpp  EngineRegistry.h
native/tools/: convert_icon.py
